--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <a class="nav-link" href="#">Pricing</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link ">Disabled</a>
+                <a class="nav-link" href="#">Disabled</a>
               </li>
             </ul>
           </div>
