--- a/index.html
+++ b/index.html
@@ -206,7 +206,20 @@
     </main>
 
   <footer>
-
+    <footer class="d-flex justify-content-center align-items-center py-3 my-4 border-top">
+      <div class="col-md-4 d-flex align-items-center">
+        <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+          <img class="logo" src="src/img/Anotação_2022-06-15_210035-removebg-preview (1).png" alt="">
+        </a>
+        <span class="text-muted">&copy; 2022 CoinSult </span>
+      </div>
+  
+      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+        <li class="ms-3"><a class="text-muted" href="#"><img src="src/img/logo-do-facebook.png" alt=""></a></li>
+        <li class="ms-3"><a class="text-muted" href="#"><img src="src/img/logotipo-do-instagram.png" alt=""></li>
+        <li class="ms-3"><a class="text-muted" href="#"><img src="src/img/logotipo-do-whatsapp.png" alt=""></a></li>
+      </ul>
+    </footer>
   </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
